finshed setting up Gradle and javaFX